# mlops_tft

./: .gitignore  README.md  pyproject.toml  tft_data_analysis.py  tft_data_collector.py  tft_place_predictor.py
conf/base/: catalog.yml  parameters_data_collector.yml  parameters_place_predictor.yml
data/: X_test.parquet  X_train.parquet  config.JSON  processed_challenger_match_data.csv  processed_master_match_data.csv  processed_master_match_data.parquet  processed_matched_data.parquet  processed_matches_data.parquet  tableau_data.parquet  unprocessed_challenger_match_data.csv  unprocessed_master_match_data.csv  unprocessed_master_match_data.parquet  unprocessed_matched_data.parquet  unprocessed_matches_data.parquet  y_test.parquet  y_train.parquet
etc/: API_key.json  rf.pkl
mlops-tft/: pyproject.toml  requirements.txt
src/mlops_tft/: __init__.py  __main__.py  settings.py
src/mlops_tft/pipelines/data_collector/: __init__.py  nodes.py  pipeline.py  sklearn_pipes.py
src/mlops_tft/pipelines/place_predictor/: __init__.py  nodes.py  optuna_utils.py  pipeline.py
tests/pipelines/data_collector/: test_pipeline.py
tests/pipelines/place_predictor/: test_pipeline.py
