[tool.poetry]
name = "tft-project"
version = "0.1.0"
description = ""
authors = ["smaaguero <smaaguero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
requests = "^2.32.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
flatten-json = "^0.1.14"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
