[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_tft"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
mlops-tft = "mlops_tft.__main__:main"

[tool.kedro]
package_name = "mlops_tft"
project_name = "mlops_tft"
kedro_init_version = "0.19.7"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "mlops_tft.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
